--- a/tryinThisAgainTwo.html
+++ b/tryinThisAgainTwo.html
@@ -2,7 +2,13 @@
   <head>
     <link rel="stylesheet" href="myStyles.css">
     <script src="myScript.js"></script>
+
 </header>
+
+
+
+<!-- How to put a box around the text? Classify one paragraph or iamge to another (class== ? In <p?>) -->
+
 
 <body>
 
@@ -14,7 +20,7 @@
 <p> I think nazis are bad, and that the patriarchy and systems of antisemitism and other oppressions need to be dismantled.
   I can and will punch Nazis on sight because their existence is an incitement of violence, especially against those who are Jewish.
   Also the government needs to regulate healthcare and other human rights so that the right to life and happiness can actually
-  be fulfilled without this helleconomy called capitalism and refusal to socialist policies socialist. Thanks Red Scare. I think we should
+  be fulfilled without this helleconomy called capitalism and refusal to refer to socialist policies socialist. Thanks Red Scare. I think we should
   know our collective histories, so we don't repeat our own mistakes. </p>
 
 <h2> What I Like To Do </h2>
@@ -38,21 +44,22 @@
     <img alt= "A short, stocky traditonally drawn orc character is shown. He is facing to the left, and has a scar on his
     left outer upper arm. His chin is scruffy, and he has long black hair a bit past his shoulders. He is wearing armor and a cloth
     belt with two swords hanging from it. The image cuts off at the characters fingers."
-    src="dunar.jpg" alt="Dunar" width="600" height="600">
+    src="dunar.jpg" alt="Dunar" width="700" height="700">
   </a>
   <div class="desc">My most recent DnD Character</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="plants.jpg">
-    <img src="plants.jpg" alt="plants" width="600" height="600">
+    <img alt = ""
+    src="plants.jpg" alt="plants" width="700" height="700">
   </a>
   <div class="desc">Some Cacti from Big Bend</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="carmen.jpg">
-    <img src="carmen.jpg" alt="carmen" width="600" height="600">
+    <img src="carmen.jpg" alt="carmen" width="700" height="700">
   </a>
   <div class="desc">Another DnD Character, Carmen</div>
 </div>
